crates/core/src/snapshots/marzano_core__test__import_multiple.snap
---
source: crates/core/src/test.rs
expression: results
---
- __typename: Rewrite
  original:
    messages: []
    variables:
      - name: $new_files
        scopedName: 0_0_$new_files
        ranges: []
      - name: $program
        scopedName: 0_1_$program
        ranges: []
      - name: $filename
        scopedName: 0_2_$filename
        ranges: []
      - name: $absolute_filename
        scopedName: 0_3_$absolute_filename
        ranges: []
      - name: $GLOBAL_IMPORTED_SOURCES
        scopedName: 0_4_$GLOBAL_IMPORTED_SOURCES
        ranges: []
      - name: $GLOBAL_IMPORTED_NAMES
        scopedName: 0_5_$GLOBAL_IMPORTED_NAMES
        ranges: []
      - name: $imports
        scopedName: 2_0_$imports
        ranges:
          - start:
              line: 1
              column: 10
            end:
              line: 1
              column: 18
            startByte: 9
            endByte: 17
          - start:
              line: 2
              column: 10
            end:
              line: 2
              column: 15
            startByte: 40
            endByte: 45
      - name: $source
        scopedName: 2_1_$source
        ranges:
          - start:
              line: 1
              column: 26
            end:
              line: 1
              column: 31
            startByte: 25
            endByte: 30
          - start:
              line: 2
              column: 23
            end:
              line: 2
              column: 35
            startByte: 53
            endByte: 65
      - name: $from
        scopedName: 3_0_$from
        ranges: []
      - name: $name
        scopedName: 3_1_$name
        ranges: []
      - name: $statements
        scopedName: 3_2_$statements
        ranges: []
      - name: $name
        scopedName: 4_0_$name
        ranges: []
      - name: $from
        scopedName: 4_1_$from
        ranges: []
      - name: $imports
        scopedName: 4_2_$imports
        ranges: []
      - name: $source
        scopedName: 5_0_$source
        ranges: []
      - name: $name
        scopedName: 5_1_$name
        ranges: []
      - name: $p
        scopedName: 6_0_$p
        ranges:
          - start:
              line: 1
              column: 1
            end:
              line: 3
              column: 1
            startByte: 0
            endByte: 66
          - start:
              line: 1
              column: 1
            end:
              line: 3
              column: 1
            startByte: 0
            endByte: 66
          - start:
              line: 1
              column: 1
            end:
              line: 3
              column: 1
            startByte: 0
            endByte: 66
          - start:
              line: 1
              column: 1
            end:
              line: 3
              column: 1
            startByte: 0
            endByte: 66
          - start:
              line: 1
              column: 1
            end:
              line: 3
              column: 1
            startByte: 0
            endByte: 66
          - start:
              line: 1
              column: 1
            end:
              line: 3
              column: 1
            startByte: 0
            endByte: 66
      - name: $all_imports
        scopedName: 6_1_$all_imports
        ranges: []
      - name: $source
        scopedName: 6_2_$source
        ranges: []
      - name: $imported_names
        scopedName: 6_3_$imported_names
        ranges: []
      - name: $joined_imported_names
        scopedName: 6_4_$joined_imported_names
        ranges: []
      - name: $imports
        scopedName: 6_5_$imports
        ranges:
          - start:
              line: 1
              column: 10
            end:
              line: 1
              column: 18
            startByte: 9
            endByte: 17
          - start:
              line: 2
              column: 10
            end:
              line: 2
              column: 15
            startByte: 40
            endByte: 45
      - name: $p
        scopedName: 7_0_$p
        ranges:
          - start:
              line: 1
              column: 1
            end:
              line: 3
              column: 1
            startByte: 0
            endByte: 66
          - start:
              line: 1
              column: 1
            end:
              line: 3
              column: 1
            startByte: 0
            endByte: 66
          - start:
              line: 1
              column: 1
            end:
              line: 3
              column: 1
            startByte: 0
            endByte: 66
      - name: $source
        scopedName: 7_1_$source
        ranges: []
      - name: $imported_names
        scopedName: 7_2_$imported_names
        ranges: []
      - name: $all_imports
        scopedName: 7_3_$all_imports
        ranges: []
      - name: $name
        scopedName: 7_4_$name
        ranges: []
      - name: $p
        scopedName: 8_0_$p
        ranges:
          - start:
              line: 1
              column: 1
            end:
              line: 3
              column: 1
            startByte: 0
            endByte: 66
          - start:
              line: 1
              column: 1
            end:
              line: 3
              column: 1
            startByte: 0
            endByte: 66
          - start:
              line: 1
              column: 1
            end:
              line: 3
              column: 1
            startByte: 0
            endByte: 66
          - start:
              line: 1
              column: 1
            end:
              line: 3
              column: 1
            startByte: 0
            endByte: 66
          - start:
              line: 1
              column: 1
            end:
              line: 3
              column: 1
            startByte: 0
            endByte: 66
          - start:
              line: 1
              column: 1
            end:
              line: 3
              column: 1
            startByte: 0
            endByte: 66
          - start:
              line: 1
              column: 1
            end:
              line: 3
              column: 1
            startByte: 0
            endByte: 66
      - name: $all_imports
        scopedName: 8_1_$all_imports
        ranges: []
      - name: $p
        scopedName: 9_0_$p
        ranges:
          - start:
              line: 1
              column: 1
            end:
              line: 3
              column: 1
            startByte: 0
            endByte: 66
      - name: $from
        scopedName: 10_0_$from
        ranges: []
      - name: $name
        scopedName: 10_1_$name
        ranges: []
      - name: $name
        scopedName: 11_0_$name
        ranges: []
      - name: $from
        scopedName: 11_1_$from
        ranges: []
      - name: $clause
        scopedName: 11_2_$clause
        ranges: []
      - name: $raw_source
        scopedName: 11_3_$raw_source
        ranges: []
      - name: $import
        scopedName: 11_4_$import
        ranges: []
      - name: $imports
        scopedName: 11_5_$imports
        ranges: []
      - name: $others
        scopedName: 11_6_$others
        ranges: []
      - name: $f
        scopedName: 12_0_$f
        ranges:
          - start:
              line: 1
              column: 10
            end:
              line: 1
              column: 13
            startByte: 9
            endByte: 12
      - name: $name
        scopedName: 12_1_$name
        ranges: []
      - name: $buuuz_source
        scopedName: 12_2_$buuuz_source
        ranges: []
      - name: $new_name
        scopedName: 12_3_$new_name
        ranges: []
      - name: $bar_source
        scopedName: 12_4_$bar_source
        ranges: []
      - name: $other_name
        scopedName: 12_5_$other_name
        ranges: []
      - name: $other_source
        scopedName: 12_6_$other_source
        ranges: []
      - name: $match
        scopedName: 12_7_$match
        ranges:
          - start:
              line: 1
              column: 10
            end:
              line: 1
              column: 13
            startByte: 9
            endByte: 12
    sourceFile: test-file.tsx
    content: "import { foo, bar } from 'bar'\nimport { other } from 'other.file'\n"
    byteRanges: ~
    ranges:
      - start:
          line: 1
          column: 10
        end:
          line: 1
          column: 13
        startByte: 9
        endByte: 12
  rewritten:
    messages: []
    variables: []
    sourceFile: test-file.tsx
    content: "import { buz } from 'buuuz';\nimport { foo, bar, morefoo } from 'bar'\nimport { other, otherfoo } from 'other.file'\n"
    byteRanges:
      - start: 0
        end: 114
    ranges: []
  reason: ~
  id: e9ca0036-830e-467c-a852-748d7662e6a5
- __typename: DoneFile
  relativeFilePath: test-file.tsx
